charset везде где вспомнил вставил utf8 исправил функцию кластер. в группе теперь ключи которые не кластер. есть в резулт. файле fat jar