@@ -5,27 +5,26 @@ import com.opencsv.CSVWriter;
 import com.opencsv.exceptions.CsvException;
 
 import java.io.*;
-import java.nio.charset.Charset;
 import java.util.*;
 import java.util.regex.*;
 import java.util.stream.Collectors;
 
 import static java.lang.Integer.parseInt;
+import static java.nio.charset.StandardCharsets.*;
 
 public class Main {
     private static final Map<String, List<String[]>> groups = new HashMap<>(); // FIXME optimize
     private static final Map<Integer, List<Integer>> groupHierarchy = new HashMap<>();
     private static int currentGroupId = 0; // Unique group ID counter
-    private static List<String[]> csvData = new ArrayList<>();
     private static String[] headers;
-    private static List<String[]> unclusteredKeywords = new ArrayList<>(); // Некластеризованные строки
+    private static final List<String[]> csvData = new ArrayList<>(); // Некластеризованные строки
 
 
     private static final CSVWriter writer;
 
     static {
         try {
-            writer = new CSVWriter(new FileWriter("result.csv", false));
+            writer = new CSVWriter(new OutputStreamWriter(new FileOutputStream("result.csv", false), UTF_8));
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
@@ -41,28 +40,30 @@ public class Main {
         }));
 
 
-        Scanner scanner = new Scanner(System.in);
+        Scanner scanner = new Scanner(System.in, "UTF-8");
 
-        System.out.println("Введите путь к файлу CSV:");
-        String filePath = /*scanner.nextLine();*/ "proseller.csv";
+        sout("Введите путь к файлу CSV:");
+        String filePath = scanner.nextLine(); /*"proseller.csv";*/
 
         try {
             loadCSV(filePath);
-            System.out.println("Файл успешно загружен!");
+            sout("Файл успешно загружен!");
 
             while (true) {
-                System.out.println("\nВыберите опцию:");
-                System.out.println("1: Создать группу");
-                System.out.println("2: Создать подгруппу");
-                System.out.println("3: Сохранить CSV");
-                System.out.println("0: Выход");
+                sout("\nВыберите опцию:");
+                sout("1: Создать группу");
+                sout("2: Создать подгруппу");
+                sout("3: Сохранить CSV");
+//                sout("3: Показать CSV");
+                sout("0: Выход");
                 int choice = parseInt(scanner.nextLine());
 
                 if (choice == 1) createGroup(scanner);
-                else if (choice == 2) /*createSubgroup(scanner);*/ return;
+                else if (choice == 2) createSubgroup(scanner);
                 else if (choice == 3) saveCSV();
+//                else if (choice == 4) displayCSV();
                 else if (choice == 0) return;
-                else System.out.println("Неверный выбор!");
+                else sout("Неверный выбор!");
             }
         } catch (IOException e) {
             System.err.println("Ошибка: " + e.getMessage());
@@ -71,29 +72,33 @@ public class Main {
         }
     }
 
+    private static void displayCSV() {
+//        sout();
+    }
+
     private static void loadCSV(String filePath) throws IOException, CsvException {
-        try (CSVReader reader = new CSVReader(new FileReader(filePath))) {
+        try (CSVReader reader = new CSVReader(new InputStreamReader(new FileInputStream(filePath), UTF_8))) {
             List<String[]> data = reader.readAll();
             if (data.isEmpty()) throw new IOException("Файл пустой!");
 
-            headers = new String[data.getFirst().length + 1];
+            headers = new String[data.get(0).length + 1];
             headers[0] = "Group";
-            System.arraycopy(data.getFirst(), 0, headers, 1, data.getFirst().length);
-            unclusteredKeywords.addAll(data.subList(1, data.size())); // Сохраняем все строки как некластеризованные
+            System.arraycopy(data.get(0), 0, headers, 1, data.get(0).length);
+            csvData.addAll(data.subList(1, data.size())); // Сохраняем все строки как некластеризованные
         }
     }
 
     private static void createGroup(Scanner scanner) {
-        System.out.println("Введите регулярное выражение для поиска ключевых слов:");
+        sout("Введите регулярное выражение для поиска ключевых слов:");
         String regex = scanner.nextLine();
 
         Pattern pattern = Pattern.compile(regex);
-        List<String[]> matchingKeywords = unclusteredKeywords.stream()
+        List<String[]> matchingKeywords = csvData.stream()
                 .filter(row -> pattern.matcher(row[0]).find())
                 .collect(Collectors.toList());
 
         if (matchingKeywords.isEmpty()) {
-            System.out.println("Ключевые слова не найдены.");
+            sout("Ключевые слова не найдены.");
             return;
         }
 
@@ -101,45 +106,52 @@ public class Main {
         groups.put(regex + " - " + groupId, matchingKeywords); // Добавляем строки в новую группу
         groupHierarchy.put(groupId, new ArrayList<>());
 
-        unclusteredKeywords.removeAll(matchingKeywords); // Удаляем из некластеризованных
+        csvData.removeAll(matchingKeywords); // Удаляем из некластеризованных
 
-        System.out.println("Группа " + groupId + " создана с " + matchingKeywords.size() + " ключевыми словами.");
+        sout("Группа " + groupId + " создана с " + matchingKeywords.size() + " ключевыми словами.");
+    }
+    
+    private static void sout(String str) {
+        System.out.println(new String(str.getBytes(), UTF_8));
     }
 
+    private static void createSubgroup(Scanner scanner) {
+        sout("Введите индекс группы для создания подгруппы:");
+        String parentId = scanner.nextLine();
 
-    /*private static void createSubgroup(Scanner scanner) {
-        System.out.println("Введите индекс группы для создания подгруппы:");
-        int parentId = parseInt(scanner.nextLine());
-
-        // FIXME
-        if (!groups.containsKey(parentId)) {
-            System.out.println("Группа с таким индексом не найдена.");
+        Map.Entry<String, List<String[]>> entry = groups
+                .entrySet()
+                .stream()
+                .filter(t -> t.getKey().split("-")[1].contains(parentId))
+                .findFirst()
+                .orElse(null);
+        if (entry == null) {
+            sout("Группа по такому индексу не найден");
             return;
         }
-
-        System.out.println("Введите регулярное выражение для поиска ключевых слов:");
+        sout("Введите регулярное выражение для поиска ключевых слов:");
         String regex = scanner.nextLine();
 
         Pattern pattern = Pattern.compile(regex);
-        List<String> parentKeywords = groups.get(parentId);
-        List<String> matchingKeywords = parentKeywords.stream()
-                .filter(keyword -> pattern.matcher(keyword).find())
+        List<String[]> parentKeywords = entry.getValue();
+        List<String[]> matchingKeywords = parentKeywords.stream()
+                .filter(row -> pattern.matcher(row[0]).find())
                 .collect(Collectors.toList());
 
         if (matchingKeywords.isEmpty()) {
-            System.out.println("Ключевые слова не найдены.");
+            sout("Ключевые слова не найдены.");
             return;
         }
 
         int groupId = ++currentGroupId;
         groups.put(regex + " - " + groupId, matchingKeywords);
-        groupHierarchy.put(groupId, new ArrayList<>());
-        groupHierarchy.get(parentId).add(groupId);
+//                    groupHierarchy.put(groupId, new ArrayList<>());
+//                    groupHierarchy.get(parentId).add(groupId);
 
         parentKeywords.removeAll(matchingKeywords);
 
-        System.out.println("Подгруппа " + groupId + " создана внутри группы " + parentId);
-    }*/
+        sout("Подгруппа " + groupId + " создана внутри группы " + parentId + " с " + matchingKeywords.size() + " ключевыми словами");
+    }
 
     private static void saveCSV() {
         List<String[]> newCsvData = new ArrayList<>();
@@ -155,12 +167,15 @@ public class Main {
             }
         }
 
-        /*for (String[] row : csvData) {
-            newCsvData.add(new String[]{"", row[0]}); // Пустая группа для некластеризованных
-        }*/
+        for (String[] csvDatum : csvData) {
+            String[] temp = new String[csvData.get(0).length + 1];
+            temp[0] = "";
+            System.arraycopy(csvDatum, 0, temp, 1, csvData.get(0).length);
+            newCsvData.add(temp); // Пустая группа для некластеризованных
+        }
 
         writer.writeAll(newCsvData);
-        System.out.println("CSV файл успешно обновлен!");
+        sout("CSV файл успешно обновлен!");
     }
 
     private static String getGroupPath(int groupId) {
